
[metadata]
name = fakecommit
version = attr: src.__version__
author = CodingSamrat (Sam)
author_email = samratbiswas986@gmail.com
description = You can use it to make your github accountt look profesional
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.7

